tests/negative/semantic/wrong_arg_count_endswith/input.ci
void main() {
    print(toString(endsWith("a")) + "\n");
}
